# openjazz

./: CMakeLists.txt
src/: main.cpp  setup.cpp  util.cpp
src/io/: controls.cpp  sound.cpp
src/io/gfx/: psp2_shader.c  psp2_shader.h  video.cpp  video.h
src/menu/: menu.cpp  setupmenu.cpp
